--- a/src/components/ProjectTodoList/TodoList.styles.css
+++ b/src/components/ProjectTodoList/TodoList.styles.css
@@ -48,3 +48,15 @@ h1 {
 .text-danger {
     color: red;
 }
+
+.task-to-do {
+    font-size: 12px;
+}
+.taskTodo {
+    display: flex;
+    justify-content: space-between;
+}
+
+.priority , .score {
+    color: orange;
+}
